# cmake-learining

./: .gitignore  CMakeLists.txt  chiara.c  version.h.in
lib/: CMakeLists.txt  lib.c
